# IN_SDL_Demo

./: .gitignore  CMakeLists.txt  IN_SDL_Demo.sln  IN_SDL_Demo.vcxproj  IN_SDL_Demo.vcxproj.filters  house.x  textured_fs.glsl  textured_vs.glsl
Sources/: confReader.cpp  confReader.h  exception.cpp  exception.h  in_scene.cpp  in_scene.h  main.cpp  mini_camera.cpp  mini_camera.h  mini_collision.cpp  mini_collision.h  mini_fpsCounter.h  mini_material.cpp  mini_material.h  mini_mesh.cpp  mini_mesh.h  mini_sceneGraph.cpp  mini_sceneGraph.h  mini_sceneNode.cpp  mini_sceneNode.h  mini_xfileLoader.cpp  mini_xfileLoader.h  mini_xfileToken.cpp  mini_xfileToken.h  sdl_application.cpp  sdl_application.h  test_window.cpp  test_window.h  util.cpp  util.h  window_base.cpp  window_base.h
Sources/OpenGL/: Core  GLCaps.cpp  GLCaps.h  GLExts.inl  GLStateManager.cpp  GLStateManager.h  Geometry.cpp  Geometry.h  Material.h  TextRenderer.cpp  TextRenderer.h  TexturedMaterial.cpp  TexturedMaterial.h  arrayBuffer.cpp  arrayBuffer.h  gl_utils.cpp  gl_utils.h  myGL.h  shader.cpp  shader.h  texture2d.cpp  texture2d.h
Sources/VTF/: Pointers  atomics.cpp  atomics.h
Sources/VTF/pointer/: RefObject.cpp  RefObject.h  ownptr.h  refptr.h
